--- a/starthtml.html
+++ b/starthtml.html
@@ -23,7 +23,7 @@
 
     <h1 style="color:cornflowerblue">안녕 난 ■■■이야</h1>
     <h1>결혼</h1>
-    <h1>좋아</h1>
+    <h1 style="color:darksalmon">좋아</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis iste excepturi nobis laudantium praesentium
         nulla nemo mollitia. Natus et unde, libero consequatur, porro accusantium provident reiciendis, quae rerum
         labore laborum.
