이름, 혈액형, MBTI

--- a/starthtml.html
+++ b/starthtml.html
@@ -21,9 +21,10 @@
     <!-- F1눌러서 검색가능함! -->
     <!-- lorem picsum 임의의 이미지 -->
 
-    <h1 style="color:cornflowerblue">안녕 난 ■■■이야</h1>
-    <h1>결혼llll</h1>
-    <h1 style="color:darksalmon">결혼 축하해</h1>
+    <h1 style="color:cornflowerblue">안녕하세요</h1>
+    <h2 style="color: lightblue;">이름 : 장상은</h2>
+    <h2 style="color:darksalmon">혈액형 : O형</h2>
+    <h2 style="color:mediumpurple">MBTI : INFP or ENFP</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis iste excepturi nobis laudantium praesentium
         nulla nemo mollitia. Natus et unde, libero consequatur, porro accusantium provident reiciendis, quae rerum
         labore laborum.
@@ -75,12 +76,10 @@
             Nostrud et duis eiusmod veniam veniam qui nisi ea enim nulla aute qui. </p>
 
 
-        <img src="https://picsum.photos/id/684/600/400" alt="">
+
         <!-- picsum -->
         <!-- 684>1000으로 변경하니 다른 사진이 뜸! picsum에서 아래로 내리면 사진마다 이름있음!-->
         <!-- 플러그인 (추가 기능설치!?옵션? ex)Beautify) -->
-        <img src="https://picsum.photos/id/1000/600/400" alt="">
-        <img src="https://picsum.photos/id/237/600/400" alt="">
         <!-- html로 프로그래밍하는건 말이 안된대유 -->
 
         <!-- h1태그는 제목 적을 때 작성 -->
