br은 띄워쓰기

--- a/html/html_20211012/start_html.html
+++ b/html/html_20211012/start_html.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <!-- <meta charset="UTF-8"> -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>테스트</title>
 </head>
 <body>
-    <h1>안녕 오랜만이야</h1>
+    <h1>안녕하세요<br>반가워요</h1>
+    <p>계속 올라가요</p>
+    <br>
+    <br>
+    <br>
+    <p>br은 띄워쓰기</p>
+    <!-- br은 띄워쓰기  C언어에서의 \n이다!-->
 </body>
 </html>
