--- a/실습3.html
+++ b/실습3.html
@@ -16,13 +16,13 @@
         <caption>colgroup연습</caption>
         <tr>
             
-            <td><img src="../img.jpg" width = "250px" height="250px" alt=""></td>
+            <td><img src="https://blog.kakaocdn.net/dn/dtoK7e/btqzyXit0uH/h79QL5mr6q2wJH5H9nDsaK/img.jpg" width = "250px" height="250px" alt=""></td>
             <td align="center">PC</td>
             <td align="center">Game</td>
             <td align="center">V4</td>
         </tr>
         <tr>
-            <td><img src="../lotus.jpg" width = "250px" height="250px" alt=""></td>
+            <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTn2qdKSkMf0BJQA58gO54s_8uyKfXMlQkl-QwB1nkgq8O5EWB3L3tkFkC7c0uxQWibpWI&usqp=CAU" width = "250px" height="250px" alt=""></td>
             <td align="center">연꽃</td>
             <td align="center">로터스</td>
             <td align="center">lotus</td>
